--- a/real-estate/package.json
+++ b/real-estate/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/style": "^0.8.0",
+    "axios": "^1.7.7",
+    "framer-motion": "^11.3.31",
+    "millify": "^6.1.0",
+    "next": "14.2.7",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "react-horizontal-scrolling-menu": "^7.1.7",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
