--- a/real-estate/package.json
+++ b/real-estate/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7"
+    "eslint-config-next": "^14.2.7"
   }
 }
