--- a/real-estate/package.json
+++ b/real-estate/package.json
@@ -12,10 +12,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.13.0",
     "axios": "^1.7.7",
-    "framer-motion": "^11.3.31",
+    "framer-motion": "^11.4.0",
     "millify": "^6.1.0",
-    "next": "14.2.7",
+    "next": "^14.2.7",
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
